1-kubernetes/2-dataplane/2-volume/2-secrect/ingress/example-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: example
  namespace: default
  labels:
    app: example
spec:
  containers:
  - name: nginx
    image: nginx:latest
    imagePullPolicy: IfNotPresent
    ports:
    - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: example
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: example
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
